5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1577_1333.log
== TEST (2019-03-21 18:38:01) 
-- CODE:
expressao = 30 – 3 ** 2 + ((8 // 3) ** (2 * 10))


print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + ((8 // 3) ** (2 * 10))
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:38:03) 
-- CODE:
expressao = 30 – 3 ** 2 + ((8 // 3) ** (2 * 10))


print(expressao)
-- EXECUTION TIME:
0.168777
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + ((8 // 3) ** (2 * 10))
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:38:04) 
-- CODE:
expressao = 30 – 3 ** 2 + ((8 // 3) ** (2 * 10))


print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + ((8 // 3) ** (2 * 10))
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:38:22) 
-- CODE:
expressao = 30 – (3 ** 2) + ((8 // 3) ** (2 * 10))


print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – (3 ** 2) + ((8 // 3) ** (2 * 10))
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:38:24) 
-- CODE:
expressao = 30 – (3 ** 2) + ((8 // 3) ** (2 * 10))


print(expressao)
-- EXECUTION TIME:
0.16341
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    expressao = 30 \u2013 (3 ** 2) + ((8 // 3) ** (2 * 10))
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:08:28) 
-- CODE:
expressao =30 – 3 ** 2 + 8 // 3 ** 2 * 10


print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao =30 – 3 ** 2 + 8 // 3 ** 2 * 10
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:08:31) 
-- CODE:
expressao =30 – 3 ** 2 + 8 // 3 ** 2 * 10


print(expressao)
-- EXECUTION TIME:
0.147281
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    expressao =30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:09:07) 
-- CODE:
expressao =30 - 3 ** 2 + 8 // 3 ** 2 * 10


print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:10:53) 
-- CODE:
expressao =30 - (3 ** 2) + 8 // (3 ** 2) * 10


print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:10:55) 
-- CODE:
expressao =30 - (3 ** 2) + 8 // (3 ** 2) * 10


print(expressao)
-- EXECUTION TIME:
0.169494
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
